# docstring_geneater

./: README.md  backup.py  pyproject.toml
notebook/: dev.ipynb
src/: chain.py  check_docstring.py  llms.py  main.py
